fix(map): implemented rigorous geometric vector math to track the pivot off-center seamlessly, and expanded bounding box to 300% to eliminate black voids

--- a/style.css
+++ b/style.css
@@ -442,10 +442,10 @@ button:disabled {
 
 #map-wrapper {
     position: absolute;
-    width: 200%;
-    height: 200%;
-    top: -50%;
-    left: -50%;
+    width: 300%;
+    height: 300%;
+    top: -100%;
+    left: -100%;
     transition: transform 0.1s linear;
     transform-origin: center center;
 }
